--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "openzwave"]
 	path = openzwave
-	url = https://github.com/OpenZWave/open-zwave.git
+	url = https://github.com/pjones/open-zwave.git
